# Gtk-Web-Browser

./: .gitignore  CMakeLists.txt  README.md
src/: Browser.cpp  Browser.h  Page.cpp  Page.h  WebBrowser.cpp  WebBrowser.h  WebView.cpp  WebView.h  main.cpp
styles/: browser.ui  page.ui  web_browser.ui  web_browser.ui~
